Fix white space for team descriptions

--- a/components/PartyDetails/index.scss
+++ b/components/PartyDetails/index.scss
@@ -70,6 +70,7 @@
         p {
             font-size: $font-regular;
             line-height: $font-regular * 1.2;
+            white-space: pre-line;
         }
     }
 }
